Bug 1991693 - Fix images from New Tab Story Cards disappear on hover with the Refined Cards Layout option disabled on High Contrast Mode. r=home-newtab-reviewers,thecount
Differential Revision: https://phabricator.services.mozilla.com/D269449

--- a/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/CardSections/_CardSections.scss
+++ b/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/CardSections/_CardSections.scss
@@ -234,7 +234,8 @@
     }
 
     .card-stp-button-hover-background {
-      background: transparent; }
+      background: transparent;
+    }
 
     &:hover,
     &:active,
@@ -251,6 +252,10 @@
 
   .card-stp-button-position-wrapper {
     inset-inline-end: var(--space-small);
+  }
+
+  .card-stp-button-hover-background {
+    background: transparent;
   }
 
   .card-stp-thumbs-buttons-wrapper {
